feat : applying spring boot best practices (#1612)
* feat : applying spring boot best practices

* fix spotless format issue